Fix audio degradation issues

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div>
         <h1>Talkie</h1>
         <div>
-            <button id='upload-button' onclick="uploadFile()">Upload ▲</button>
-            <input type="file" id="upload-input" onchange="handleFile(event)">
-            <button id='sample' onclick="initAnimation('./charlieChaplin.mp3')">Sample ▶</button>
+            <button id='upload-button'>Upload ▲</button>
+            <input type="file" id="upload-input">
+            <button id='sample'>Sample ▶</button>
         </div>
         <div>
             <a href="https://github.com/chrisjterry/Talkie"><i class="fab fa-github"></i></a>
