Add pause button and updated button CSS

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body onload="initPage()">
     <div>
         <h1>Talkie</h1>
-        <div>
-            <button id='upload-button'>Upload ▲</button>
+        <div class="button-div">
+            <button id='upload-button'>Upload <i class="fas fa-cloud-upload-alt"></i></button>
             <input type="file" id="upload-input">
-            <button id='sample'>Sample ▶</button>
+            <button id='sample'>Sample <i class="fas fa-play"></i></button>
+            <button id='pause'>Toggle <i class="fas fa-pause"></i></button>
         </div>
-        <div>
+        <div class="link-div">
             <a href="https://github.com/chrisjterry/Talkie"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/christopher-terry/"><i class="fab fa-linkedin"></i></a>
         </div>
