--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/db153ab519.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Talkie</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 <body onload="initPage()">
     <div>
