Change button position, add subheader

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 </head>
 <body onload="initPage()">
     <div>
-        <h1>Talkie</h1>
+        <div>
+            <h1>Talkie</h1>
+            <h2>Visualize speech patterns. Click on "Sample" or upload an MP3 to begin.</h2>
+        </div>
         <div class="button-div">
-            <button id='upload-button'>Upload <i class="fas fa-cloud-upload-alt"></i></button>
-            <input type="file" id="upload-input">
             <button id='sample'>Sample <i class="fas fa-play"></i></button>
             <button id='pause'>Toggle <i class="fas fa-pause"></i></button>
+            <button id='upload-button'>Upload <i class="fas fa-cloud-upload-alt"></i></button>
+            <input type="file" id="upload-input">
         </div>
         <div class="link-div">
             <a href="https://github.com/chrisjterry/Talkie"><i class="fab fa-github"></i></a>
